--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LW PDF</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        embed {
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
 </head>
-<body style="overflow: hidden;">
-    <embed src="./airbnb-original-deck-2008-160901110708.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0" style="width: 100%; height: 100vh;"></embed>
+
+<body>
+    <embed src="./airbnb-original-deck-2008-160901110708.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0"
+        class="embed"></embed>
 </body>
+
 </html>
