--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             padding: 0;
         }
 
-        embed {
+        /* embed {
             width: 100vw;
             height: 100vh;
-        }
+        } */
     </style>
 </head>
 
