--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <embed src="./airbnb-original-deck-2008-160901110708.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0"
-        class="embed"></embed>
+    <iframe src="./airbnb-original-deck-2008-160901110708.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0"
+        class="embed"></iframe>
 </body>
 
 </html>
