--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
             padding: 0;
         }
 
-        /* embed {
+        embed {
             width: 100vw;
             height: 100vh;
-        } */
+        }
     </style>
 </head>
 
 <body>
-    <iframe src="./airbnb-original-deck-2008-160901110708.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0"
-        class="embed"></iframe>
+    <embed src="./airbnb-original-deck-2008-160901110708.pdf" frameborder="0"
+        class="embed"></embed>
 </body>
 
 </html>
