--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         body {
             margin: 0;
             padding: 0;
+            display: flex;
         }
 
-        embed {
-            width: 100vw;
-            height: 100vh;
+        .embed {
+            margin: auto;
         }
     </style>
 </head>
 
 <body>
-    <embed src="./airbnb-original-deck-2008-160901110708.pdf" frameborder="0"
-        class="embed"></embed>
+    <iframe src="./airbnb-original-deck-2008-160901110708.pdf" width="500" height="500"
+        class="embed"></iframe>
 </body>
 
 </html>
